feat: Comprehensive QA.tech Documentation Overhaul
Complete restructuring and expansion of QA.tech technical documentation to improve usability, completeness, and user experience.

## Content Expansion
- Introduction: Expanded from 13 to 200+ lines with comprehensive overview
- Overview: Enhanced from 10 to 300+ lines with detailed AI agent testing concepts
- API Reference: Completely rewritten from 9 to 878 lines with full endpoint documentation
- Time Saved: Expanded from 13 to 150+ lines with metrics and case studies
- Project Context: Enhanced from 24 to 150+ lines with detailed guidance
- Notifications: Expanded from 25 to 150+ lines with configuration details
- Troubleshooting: Comprehensive guide expanded from 324 to 634 lines

## Navigation Structure Improvements
- Promoted 'Creating Tests' to top-level navigation with plus-circle icon
- Added semantic icons to all navigation groups (brain-circuit, puzzle-piece, settings, etc.)
- Created dedicated 'Best Practices' section with lightbulb icon
- Reorganized content hierarchy for logical user progression
- Added 'API Reference' section with square-terminal icon

## New Documentation Sections
- Advanced Settings guide (882 lines): Environment variables, CLI configuration, CI/CD integration
- Environment Setup guide (987 lines): Local development, staging, production configurations

## Technical Fixes
- Fixed invalid href links pointing to non-existent pages
- Resolved MDX syntax errors and frontmatter issues
- Corrected navigation configuration in mint.json
- Fixed Mintlify CLI compatibility issues
- Added proper .gitignore entries for development files

## Results
- Total content expansion: 4,000+ new lines of documentation
- Improved navigation structure with clear user progression
- Complete coverage of all QA.tech features and use cases
- Enhanced developer experience with comprehensive guides
- Resolved all compilation and server startup issues

## Files Modified
- 14 MDX files expanded with comprehensive c

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "mintlify": "^4.0.203"
   }
 }
